--- a/homePage.html
+++ b/homePage.html
@@ -74,7 +74,7 @@
     </head>
     
     <body>
-        <script language="JavaScript" type="text/javascript">
+        <script type="text/javascript">
                 if (navigator.userAgent.match(/iP/i))
         {
             $(window).bind('orientationchange', function(event)
@@ -390,10 +390,8 @@
                     </div>
                 </div>
                 <!-- map -->
-                <div id="mapPage_map" dsid="map" name="map" tiggzitype="object" apperytype="object"
-                class=' mapPage_map' style='width:100%;'>
-                    <img class=' mapPage_map' src="http://assets1.geocommons.com/d51ab1366bec6a2c4954db979e5921bd4cc140db/images/no_preview_map.png?1311276822"
-                    />
+                <div id="mapPage_map" dsid="map" name="map" tiggzitype="object" apperytype="object" class='mapPage_map' style='width:100%;' >
+                    <img class=' mapPage_map' src="http://assets1.geocommons.com/d51ab1366bec6a2c4954db979e5921bd4cc140db/images/no_preview_map.png?1311276822" />
                 </div>
                 <ul data-role="listview" id="mapPage_map_markers" name="map_markers" dsid="map_markers"
                 style="display:none">
